--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+# Ignore encrypted secrets key file.
+config/secrets.yml.key
+
+config/database.yml
